# ThatSkyLoader

./: .gitignore  CMakeLists.txt  Readme.MD
include/: vk_layer_dispatch_table.h
lib/release/: powrprof.lib
src/: api.cpp  layer.cpp  main.cpp  menu.cpp  mod_loader.cpp
src/include/: api.h  mod_loader.h
